Exceptions thrown when performing transport session cleanup can cause mongos to terminate

XMLWordPrintableJSON

    • Cluster Scalability
    • Fully Compatible
    • ALL
    • v8.0, v7.0, v6.0, v5.0
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      One example is hitting any kind of errors while calling killSessions that is not NoSuchSession

      Looks like equivalent code in current master branch is in ClientTransportObserverMongos::onClientDisconnect.

            Assignee:
            Randolph Tan
            Reporter:
            Randolph Tan
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: