SERVER-89698 Exceptions thrown when performing transport session cleanup can cause mongos to terminate (#21518)

(cherry picked from commit 383154723b23c1b072aae872ff58812a3ad2e3eb)

GitOrigin-RevId: 9aabbd349bd97fcbe8b6d26ee970d4f0db7583f4